hello-world/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kubedash.coontie.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: https
