hello-world/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "selfsigned-issuer"
spec:
  tls:
  - hosts:
    - hello1.coontie.com
    secretName: hello1-certificate
  rules:
  - host: hello1.coontie.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
  - host: hello2.coontie.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
